--- a/APTM Project/app/src/main/res/values/strings.xml
+++ b/APTM Project/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">APTM</string>
     <string name="mapbox_access_token">pk.eyJ1IjoiZ2J0d2xkIiwiYSI6ImNrYm9xaWN3bjBzMjcyeXB0dzZtanRnankifQ.Lj4Cm_P80zYLhGJojR1Bbg</string>
+    <string name="access_token">pk.eyJ1IjoiZ2J0d2xkIiwiYSI6ImNrYm9xaWN3bjBzMjcyeXB0dzZtanRnankifQ.Lj4Cm_P80zYLhGJojR1Bbg</string>
+    <string name="user_location_permission_explanation">위치 허용해야하는 이유</string>
+    <string name="user_location_permission_not_granted">위치 허용 거부</string>
 </resources>
