geoJson 파일에서 정보를 받아와 화장실 위치 표시 및 화장실 위치의 마커 클릭하면 팝업 뜨게함(팝업 오류남) 직접 정보 받아오니까 맵박스 스타일은 빼도 될듯

--- a/APTM Project/app/src/main/res/values/strings.xml
+++ b/APTM Project/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="access_token">pk.eyJ1IjoiZ2J0d2xkIiwiYSI6ImNrYm9xaWN3bjBzMjcyeXB0dzZtanRnankifQ.Lj4Cm_P80zYLhGJojR1Bbg</string>
     <string name="user_location_permission_explanation">위치 허용해야하는 이유</string>
     <string name="user_location_permission_not_granted">위치 허용 거부</string>
+    <string name="capital">Capital: %1$s</string>
+    <string name="tap_on_marker_instruction">Tap on a marker</string>
 </resources>
