--- a/APTM Project/app/src/main/res/values/strings.xml
+++ b/APTM Project/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="user_location_permission_not_granted">위치 허용 거부</string>
     <string name="capital">Capital: %1$s</string>
     <string name="tap_on_marker_instruction">Tap on a marker</string>
+    <string name="adress">주소</string>
 </resources>
